<resources >
    <string name="app_name">Go4Lunch</string>

    <!-- for the image Description -->
    <string name="app_icon">App Icon</string>
    <string name="main_background">Main Background</string>
    <string name="search">Search</string>

    <string name="sign_google">Sign in with Google</string>
    <string name="sign_facebook">Sign in with Facebook</string>

    <string name="img_desc">photo</string>


    <string name="no_username_found">No Username Found</string>
    <string name="no_email_found">No Email Found</string>

    <string name="empty">Empty</string>
    <string name="noRestaurantFound">Any restaurant found around</string>
    <string name="inLoading">Loading …</string>

    <!-- TOOLBAR TITLE -->
    <string name="sign_in_title">Sign In</string>
    <string name="hungry_title">I\'m hungry !</string>
    <string name="workmates_title">My Workmates</string>
    <string name="details_title">Restaurant Details</string>
    <string name="settings_title">Settings</string>

    <!-- RESULT SIGN IN -->
    <string name="connection_succeed">Connection Succeed !</string>
    <string name="error_authentication_canceled">Error Authentication Canceled !</string>
    <string name="error_no_internet">Error No Internet !</string>
    <string name="error_unknown_error">Error Unknown Error !</string>

    <!-- TOOLBAR TITLES -->
    <string name="toolbar_title_login_activity">My Profile</string>
    <string name="search_restaurants">Search Restaurants</string>
    <string name="search_workmates">Search Workmates</string>

    <!-- NAVIGATION DRAWER -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- BOTTOM MENU -->
    <string name="map">Map</string>
    <string name="restaurants">Restaurants</string>
    <string name="workmates">Workmates</string>

    <!-- GOOGLE MAP -->
    <string name="title_activity_maps">Map</string>
    <string name="current_position">Current Position</string>
    <string name="default_info_title">Current Position</string>
    <string name="default_info_snippet">Current Position</string>


    <string name="restaurant_menu">Your Lunch</string>
    <string name="settings">Settings</string>
    <string name="power_settings">Logout</string>

    <!-- CODE_RESTAURANTS CODE_DETAILS BUTTON -->
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>

    <!-- APP DICTIONARY -->
    <string name="go_eat">will eat at</string>
    <string name="will_eat">you will eat at</string>
    <string name="doesnt_chosen">hasn\'t chosen where to eat</string>
    <string name="is_joining">is joining !</string>
    <string name="none_joining">There is none workmates coming yet !</string>
    <string name="none_restaurant">There is none restaurant found !</string>
    <string name="none_workmate">Any workmate found !</string>
    <string name="open">Open</string>
    <string name="close">Closed</string>

    <!-- SETTINGS DICTIONARY -->

    <string name="notification_label">Notification :</string>
    <string name="enable_notification">Enable Notification (Once per day at 12:00)</string>
    <string name="filter_list_label">Restaurants\'s list filters :</string>
    <string name="by_default">By default</string>
    <string name="by_distance_less">By distance (- to + , by default)</string>
    <string name="by_distance_more">By distance (+ to -)</string>
    <string name="by_google_rating_less">By google\'s rating (- to +)</string>
    <string name="by_google_rating_more">By google\'s rating (+ to -)</string>
    <string name="by_like_less">By like\'s rating (- to +)</string>
    <string name="by_like_more">By like\'s rating (+ to -)</string>

    <!-- LOADING DICTIONARY -->
    <string name="initActivity">Initialising Activity</string>
    <string name="checkingWorkmates">Checking Workmates List</string>
    <string name="updatingWorkmates">Updating Workmates List</string>
    <string name="checkingRestaurants">Checking Restaurants List</string>
    <string name="updatingRestaurants">Updating Restaurants List</string>
    <string name="checkingDatas">Checking Data</string>
    <string name="updatingDatas">Updating Data</string>
    <string name="loadingView">Loading View</string>

</resources>